# Competency-Analyser

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  Makefile  README.md  alembic.ini  app.Dockerfile  docker-compose-dev.yml  docker-compose.yml  nginx.Dockerfile  pyproject.toml  setup.cfg  telebot.Dockerfile
